<resources>
    <string name="app_name">Pro Currency</string>
    <string name="date">08.08.2023</string>
    <string name="selling_price">10 530</string>
    <string name="selling_price_with_currency">10 530 UZS</string>
    <string name="buying_price">10 530</string>
    <string name="selling">Sotilishi</string>
    <string name="buy">Sotib olish</string>
    <string name="buying">Olinishi</string>
    <string name="currency_uzs">%s UZS</string>
    <string name="uzs">UZS</string>
    <string name="not_available">Mavjud emas</string>
    <string name="time">09:00</string>
    <string name="currency_usd">USD</string>
    <string name="usd">USD</string>
    <string name="zero">0.0</string>
    <string name="history_currencies">Valyutalarning o‘zgarish tarixi</string>
    <string name="share">Ulashish</string>
    <string name="main">Bosh oyna</string>
    <string name="all_currencies">Barcha valyutalar</string>
    <string name="calculator">Kalkulyator</string>
    <string name="about_app">Dastur haqida</string>
    <string name="about_application">Pro valyuta kurslari ilovasi valyutalar haqida va almashishlari ma’lumotlar beradi.</string>
    <string name="pro_currencies">Pro valyuta kurslari</string>
    <string name="search">Search</string>
    <string name="uzbek_sum">O‘zbek so‘mi</string>
    <string name="exchange_button">Exchange Button</string>
</resources>