<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/sf_display_regular"
        android:text="@string/date"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/selling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/sf_display_regular"
        android:text="@string/selling"
        android:textColor="@color/gray_two"
        app:layout_constraintBottom_toTopOf="@id/sellingPrice"
        app:layout_constraintStart_toStartOf="@id/sellingPrice"
        app:layout_constraintTop_toTopOf="@id/divider"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sellingPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/sf_display_bold"
        android:text="@string/selling_price_with_currency"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selling"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/buying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/sf_display_regular"
        android:text="@string/selling"
        android:textColor="@color/gray_two"
        app:layout_constraintBottom_toTopOf="@id/buyingPrice"
        app:layout_constraintStart_toStartOf="@id/buyingPrice"
        app:layout_constraintTop_toTopOf="@id/divider"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/buyingPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/sf_display_bold"
        android:text="@string/selling_price_with_currency"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buying"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>