<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bgNotificationCard"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginStart="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="15dp"
    android:backgroundTint="@null"
    android:backgroundTintMode="@null"
    android:clickable="true"
    android:elevation="1dp"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:stateListAnimator="@null"
    app:cardCornerRadius="20dp"
    app:cardElevation="1dp"
    app:cardMaxElevation="0dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintCircleRadius="50dp"
    tools:ignore="MissingConstraints,TouchTargetSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_view_pager">

            <ImageView
                android:id="@+id/flag"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/usd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                style="@style/TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:text="@string/date"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/selling"
                style="@style/TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/selling"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/sellingPrice"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sellingPrice"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="15dp"
                android:text="@string/selling_price"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sellingCurrency"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/currency"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/sellingPrice" />

            <TextView
                android:id="@+id/buying"
                style="@style/TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selling"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/buyingPrice"
                app:layout_constraintStart_toStartOf="@id/buyingPrice" />


            <TextView
                android:id="@+id/buyingPrice"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/buying_price"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buyingCurrency" />


            <TextView
                android:id="@+id/buyingCurrency"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="15dp"
                android:text="@string/currency"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>