<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bgNotificationCard"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginStart="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="15dp"
    android:backgroundTint="@null"
    android:backgroundTintMode="@null"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:stateListAnimator="@null"
    app:cardCornerRadius="20dp"
    app:cardElevation="0.5dp"
    app:cardMaxElevation="0dp"
    app:cardUseCompatPadding="true"
    tools:ignore="MissingConstraints,TouchTargetSizeCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/flag"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@null"
            android:src="@drawable/usd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/sf_display_bold"
            android:text="@string/currency_usd"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/flag"
            app:layout_constraintStart_toEndOf="@id/flag"
            app:layout_constraintTop_toTopOf="@id/flag" />

        <TextView
            android:id="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/sf_display_regular"
            android:text="@string/buy"
            android:textColor="@color/gray_two"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/buyPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flag"
            app:layout_constraintVertical_bias="1"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/buyPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/sf_display_bold"
            android:text="@string/selling_price_with_currency"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/sf_display_regular"
            android:text="@string/selling"
            android:textColor="@color/gray_two"
            app:layout_constraintBottom_toTopOf="@id/sellPrice"
            app:layout_constraintStart_toStartOf="@id/sellPrice"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/sellPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/sf_display_bold"
            android:text="@string/selling_price_with_currency"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/buyPrice"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/calculateCard"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@null"
            android:backgroundTintMode="@null"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:stateListAnimator="@null"
            app:cardBackgroundColor="@color/gray_light"
            app:cardCornerRadius="500dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintBottom_toBottomOf="@id/sellPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/sell" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calculate"
            app:layout_constraintBottom_toBottomOf="@id/calculateCard"
            app:layout_constraintEnd_toEndOf="@id/calculateCard"
            app:layout_constraintStart_toStartOf="@id/calculateCard"
            app:layout_constraintTop_toTopOf="@id/calculateCard"
            android:contentDescription="@null" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>