<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.programmsoft.fragments.CalculatorFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bgNotificationCard"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edt_bg_normal"
        android:backgroundTint="@null"
        android:backgroundTintMode="@null"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:stateListAnimator="@null"
        app:cardCornerRadius="20dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="0dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/topSpinner"
                android:layout_width="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/currencyEdt"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:popupBackground="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_currency_spinner" />

            <EditText
                android:id="@+id/currencyEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/black"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sf_display_regular"
                android:hint="@string/zero"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#B3FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/exchangeImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topSpinner"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/exchangeImg"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:elevation="1dp"
                    android:src="@drawable/exchange"
                app:layout_constraintBottom_toTopOf="@id/bottomSpinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currencyEdt" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/leftDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintBottom_toBottomOf="@id/exchangeImg"
                app:layout_constraintEnd_toStartOf="@id/exchangeImg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/exchangeImg" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/rightDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintBottom_toBottomOf="@id/exchangeImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/exchangeImg"
                app:layout_constraintTop_toTopOf="@id/exchangeImg" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/bottomSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:popupBackground="@color/white"
                app:layout_constraintBottom_toTopOf="@id/currencyLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/exchangeImg"
                tools:listitem="@layout/item_currency_spinner" />

            <LinearLayout
                android:id="@+id/currencyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bottomSpinner"
                app:layout_constraintVertical_bias="1.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/buyCurrencyLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="@font/sf_display_regular"
                        android:text="@string/buy"
                        android:textColor="@color/gray_two"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@id/buyPrice"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@id/buyPrice"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/buyPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_display_bold"
                        android:text="@string/selling_price_with_currency"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/buy" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/sellCurrencyLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="@font/sf_display_regular"
                        android:text="@string/selling"
                        android:textColor="@color/gray_two"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@id/sellPrice"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@id/sellPrice"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/sellPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_display_bold"
                        android:text="@string/selling_price_with_currency"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/sell" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>